--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.11",
     "@reduxjs/toolkit": "^1.9.3",
+    "@tanstack/react-query": "^4.26.1",
     "axios": "^1.3.4",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
